<!--
  ~ Copyright 2016 Olivér Falvai
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">BPInfo</string>
    <string name="error_list_display">Unable to display traffic info</string>
    <string name="error_response">Incorrect data received from server</string>
    <plurals name="actionbar_subtitle_alert_count">
        <item quantity="one">%d traffic change</item>
        <item quantity="other">%d traffic changes</item>
    </plurals>
    <string name="error_no_connection">Server is unreachable</string>
    <string name="error_network">Network error</string>
    <string name="error_communication">Communication error</string>
    <string name="label_retry">Retry</string>
    <string name="alert_detail_label">More details</string>
    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="date_tomorrow">Tomorrow</string>
    <string name="date_until_revoke">until further notice</string>
    <string name="date_first_departure">from first departure</string>
    <string name="date_last_departure">until last departure</string>
    <string name="menu_filter_label">Filter vehicle</string>
    <string name="filter_title">Filter vehicle type</string>

    <string-array name="route_types">
        <item>@string/route_bus</item>
        <item>@string/route_tram</item>
        <item>@string/route_subway</item>
        <item>@string/route_trolleybus</item>
        <item>@string/route_rail</item>
        <item>@string/route_ferry</item>
    </string-array>

    <string name="filter_positive_button">Filter</string>
    <string name="filter_negative_button">Cancel</string>
    <string name="alert_list_empty">No traffic change to display</string>
    <string name="route_bus">Bus</string>
    <string name="route_tram">Tram</string>
    <string name="route_ferry">Ferry</string>
    <string name="route_trolleybus">Trolleybus</string>
    <string name="route_subway">Subway</string>
    <string name="route_rail">HÉV (Suburban rail)</string>
    <string name="route_bus_alt">bus</string>
    <string name="route_tram_alt">tram</string>
    <string name="route_ferry_alt">ferry</string>
    <string name="route_trolleybus_alt">trolleybus</string>
    <string name="route_subway_alt">Subway</string>
    <string name="route_rail_alt">HÉV</string>
    <string name="filter_message">Filtering: %1$s</string>
    <string name="route_other">Other</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_language_auto">Automatic</string>
    <string name="pref_language_hu">Hungarian</string>
    <string name="pref_language_en">English</string>

    <string name="pref_key_language_auto" translatable="false">auto</string>
    <string name="pref_key_language_en" translatable="false">en</string>
    <string name="pref_key_language_hu" translatable="false">hu</string>

    <string-array name="pref_language_list_titles">
        <item>@string/pref_language_auto</item>
        <item>@string/pref_language_hu</item>
        <item>@string/pref_language_en</item>
    </string-array>

    <string-array name="pref_language_list_values">
        <item>@string/pref_key_language_auto</item>
        <item>@string/pref_key_language_hu</item>
        <item>@string/pref_key_language_en</item>
    </string-array>

    <string name="pref_data_source_futar" translatable="false">BKK FUTÁR</string>
    <string name="pref_data_source_bkk_info" translatable="false">BKK INFO</string>

    <string name="pref_key_data_source_futar" translatable="false">bkk_futar</string>
    <string name="pref_key_data_source_bkk_info" translatable="false">bkk_info</string>

    <string name="pref_key_data_source_default" translatable="false">@string/pref_key_data_source_futar</string>

    <string-array name="pref_data_source_list_titles">
        <item>@string/pref_data_source_futar</item>
        <item>@string/pref_data_source_bkk_info</item>
    </string-array>

    <string-array name="pref_data_source_list_values">
        <item>@string/pref_key_data_source_futar</item>
        <item>@string/pref_key_data_source_bkk_info</item>
    </string-array>

    <string name="pref_key_data_source_override_version_code" translatable="false">data_source_override_version_code</string>


    <string name="menu_settings">Settings</string>
    <string name="pref_category_general">General</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_title_send_bugreport">Report a problem</string>
    <string name="pref_title_send_bugreport_bkk">Report a problem to BKK</string>
    <string name="pref_title_rate">Rate the app</string>
    <string name="pref_description_send_bugreport">If there\'s a problem with the app</string>
    <string name="pref_description_send_bugreport_bkk">If there\'s a problem with data (FUTÁR)</string>
    <string name="pref_description_rate">If you like the app, rate it in the Play Store</string>
    <string name="menu_debug">Debug mode</string>

    <string name="pref_key_category_general" translatable="false">category_general</string>
    <string name="pref_key_language" translatable="false">language</string>
    <string name="pref_key_send_bugreport" translatable="false">send_bugreport</string>
    <string name="pref_language_dialog_title">Restart needed</string>
    <string name="pref_language_dialog_message">In order to use the new language, the app needs to be restarted.</string>
    <string name="pref_language_dialog_positive_button">Restart</string>
    <string name="pref_language_dialog_negative_button">Later</string>
    <string name="pref_key_category_other" translatable="false">category_about</string>
    <string name="pref_key_debug_mode" translatable="false">pref_key_debug_mode</string>
    <string name="pref_key_category_notifications" translatable="false">category_notification</string>
    <string name="pref_key_notifications" translatable="false">notifications</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_title_notifications">Notification settings</string>
    <string name="pref_summary_notifications">Priority, vibration, sound</string>
    <string name="pref_title_notifications_routes">Select routes</string>
    <string name="debug_mode_on">Debug mode enabled</string>
    <string name="debog_mode_off">Debug mode disabled</string>
    <string name="email_bkk_mailto" translatable="false">mailto:futar@bkk.hu</string>
    <string name="email_bkk_body">To whom it may concern,\n\nI would like to report a problem in the data returned by the FUTÁR API:\n\nSincerely,\n</string>
    <string name="email_bkk_subject">FUTÁR API bugreport</string>
    <string name="email_developer_mailto" translatable="false">mailto:oliver.falvai@gmail.com</string>
    <string name="email_developer_subject">BPInfo feedback</string>
    <string name="title_activity_licences">Licenses</string>
    <string name="alert_label_recent">RECENT</string>
    <string name="title_activity_about">About</string>
    <string name="about_label_licences">Open source licenses</string>
    <string name="about_label_source_code">Source code on GitHub</string>
    <string name="pref_description_about">Version, licenses</string>
    <string name="pref_title_about">About</string>
    <string name="tab_title_today">Now</string>
    <string name="tab_title_future">Soon</string>
    <string name="dialog_notice_title">Notice</string>
    <string name="dialog_notice_positive_button">OK</string>
    <string name="pref_title_data_source">Data source</string>
    <string name="pref_key_data_source" translatable="false">data_source</string>
    <string name="error_alert_detail_load">Failed to load alert details</string>
    <string name="data_source_changed_refreshed">Data source changed</string>
    <string name="about_label_privacy_policy">Privacy policy</string>
    <string name="menu_notifications_label">Notifications</string>

    <string name="title_activity_notifications">Notifications</string>
    <string name="notif_channel_alerts_id" translatable="false">channel_alerts</string>
    <string name="notif_channel_alerts_title">Traffic alerts</string>
    <string name="notif_channel_alerts_desc">Notifications about selected routes</string>
    <string name="notif_watched_routes_label">Followed routes</string>
    <string name="notif_remove_dialog_message">Are you sure you want to remove?</string>
    <string name="notif_remove_dialog_positive">Remove</string>
    <string name="notif_subscribed_empty">Choose a route below to follow and receive notifications about.</string>

</resources>
