<!--
  ~ Copyright 2016 Olivér Falvai
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_general"
        android:key="@string/pref_key_category_general">

        <ListPreference
            android:title="@string/pref_title_language"
            android:key="@string/pref_key_language"
            android:defaultValue="@string/pref_key_language_auto"
            android:entries="@array/pref_language_list_titles"
            android:entryValues="@array/pref_language_list_values" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_about"
        android:key="@string/pref_key_category_about">

        <Preference
            android:title="@string/app_name"
            android:summary="TODO: version" />

        <PreferenceScreen
            android:title="@string/pref_title_send_bugreport"
            android:summary="@string/pref_description_send_bugreport"
            android:key="pref_key_send_bugreport">

            <!-- TODO: intent -->
        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/pref_title_send_bugreport_bkk"
            android:summary="@string/pref_description_send_bugreport_bkk"
            android:key="pref_key_send_bugreport_bkk">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/email_bkk_mailto">
                <extra android:name="android.intent.extra.TEXT"
                       android:value="@string/email_bkk_body" />
                <extra android:name="android.intent.extra.SUBJECT"
                       android:value="@string/email_bkk_subject" />
            </intent>

        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/pref_title_rate"
            android:summary="@string/pref_description_rate"
            android:key="pref_key_rate">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=com.example">
                <!-- TODO! -->
            </intent>
        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/pref_title_licences"
            android:summary="@string/pref_description_licences"
            android:key="pref_key_licences">

            <intent
                android:targetPackage="com.example.bkkinfoplus"
                android:targetClass="com.example.bkkinfoplus.ui.settings.LicencesActivity">
            </intent>
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
