<!--
  ~ Copyright 2018 Olivér Falvai
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.settings.AboutActivity">

        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/title_activity_about"
            android:src="@drawable/ic_launcher_big" />

        <TextView
            android:id="@+id/about_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/about_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/APP_VERSION"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/about_licenses"
            style="@style/LinkLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/about_label_licences"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/about_source_code"
            style="@style/LinkLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/about_label_source_code"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/about_privacy_policy"
            style="@style/LinkLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/about_label_privacy_policy"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</ScrollView>
